# nav_rest_api_turtlebot

./: Dockerfile  README.md  docker-compose.yaml  package.xml
launch/: test.launch
rviz/: test.rviz
scripts/: 1_create_docker_image.bash  2_create_docker_container.bash  2_run_tb3_navigation_simulation.bash  3_access_docker_container.bash  4_launch.bash  5_change_map.bash  5_dock.bash  6_undock.bash  launch_server.bash  launch_turtlebot3_gazebo_simulation.bash  map_server.py  send_nav_goal.bash  state_aggregator.py
scripts/api/: 1_go_to_opposite_home.bash  2_go_to_next_to_opposite_home.bash  3_go_to_next_to_home.bash  4_go_to__home.bash  cancel_goal.bash  clear_costmap_robot.bash  get_map.bash  get_robot_info.bash  get_robots_info.bash  localize_robot.bash  move_backward_robot.bash  move_forward_robot.bash  send_goal.py  stop_robot.bash  turn_left_robot.bash  turn_right_robot.bash  update_robot_info.bash
