<?xml version="1.0"?>
<package format="2">
  <name>nav_rest_api_turtlebot</name>
  <version>0.0.0</version>
  <description>The nav_rest_api_turtlebot package</description>

  <maintainer email="beyhy94@gmail.com">Bey Hao Yun</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
